Fixed alignment issue with green header underline

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 :root {
     --heading-color: #2b2b2c;
+    --accent-color: #618a7b;
 }
 
 html, body {
@@ -11,6 +12,17 @@ header {
     padding: 20px 10px;
     color: var(--heading-color);
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.08), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
+    position: relative;
+}
+
+header::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 25px;
+    width: 235px;
+    height: 3px;
+    background-color: var(--accent-color);
 }
 
 header > h1 {
@@ -41,6 +53,11 @@ header > h1 {
         text-align: left;
     }
 
+    header::after {
+        left: 0;
+        width: 100%;
+    }
+
     .header-right {
         float: none;
         width: 100%;
@@ -48,5 +65,44 @@ header > h1 {
 
     #header {
         width: 100%;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    header {
+        padding: 25px 40px;
+        position: relative;
+    }
+
+    header::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        max-width: 1200px;
+        height: 100%;
+        pointer-events: none;
+    }
+
+    header > h1 {
+        font-size: 2.25rem;
+        margin-left: calc((100% - 1200px) / 2);
+    }
+    
+    header::after {
+        height: 4px;
+        width: 250px;
+        left: calc((100% - 1200px) / 2 + 20px);
+    }
+
+    .header-right {
+        margin-right: calc((100% - 1200px) / 2);
+    }
+
+    .submit-button {
+        font-size: 18px;
+        padding: calc(1rem - 1px) calc(2rem - 1px);
     }
 }
